Updated scripts to latest book version